@@ -1,5 +1,9 @@
 2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* DecoratorTest.cs: Added some tests.
+
+2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* DecoratorTest.cs: Added.
 
 2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
